kustomizations/digests/app/digests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digests
  namespace: journal
spec:
  template:
    spec:
      serviceAccountName: digests
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: digests
        image: elifesciences/digests:23f3d932a3fce58d7660f93316479918d53faa52
        args:
        - bash
        - -c
        - "./migrate.sh && exec venv/bin/uwsgi --ini=/srv/digests/uwsgi.ini --enable-threads"
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: logs
          mountPath: /srv/digests/var/logs
        - name: config-volume
          mountPath: /srv/digests/uwsgi.ini
          subPath: uwsgi.ini
      - name: logs
        image: cr.fluentbit.io/fluent/fluent-bit
        command:
        - "/fluent-bit/bin/fluent-bit"
        - "--parser=/config/json-parser.conf"
        # Input
        - "--input=tail"
        - "--prop=path=/srv/digests/var/logs/digests.json.log"
        - "--prop=parser=digests"

        # Output
        - "--output=stdout"
        - "--prop=format=json_lines"
        volumeMounts:
        - name: logs
          mountPath: /srv/digests/var/logs
        - name: log-config-volume
          mountPath: /config/json-parser.conf
          subPath: json-parser.conf
      volumes:
      - name: logs
        emptyDir: {}
      - name: log-config-volume
        configMap:
          name: digests-config
          items:
          - key: json-parser.conf
            path: json-parser.conf
      - name: config-volume
        configMap:
          name: digests-config
          items:
          - key: uwsgi.ini
            path: uwsgi.ini
