kustomizations/digests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digests-api
  annotations:
    cert-manager.io/cluster-issuer: "${cert_manager_issuer}"
spec:
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: digests-api
            port:
              number: 9000
  tls:
  - hosts:
    - ${hostname}
    secretName: ${hostname}-tls
